POY-81 fix credits footer overflow

--- a/client/src/app/components/credits-footer/credits-footer.component.styl
+++ b/client/src/app/components/credits-footer/credits-footer.component.styl
@@ -7,6 +7,7 @@
     margin-top: 35px
     bottom: 0
     width: 100%
+    box-sizing: border-box
 
     background-color: shadow4
     text-align: center
